k8s/cluster/minio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-minio
spec:
  ports:
    - name: http
      port: 9000
      targetPort: http
  selector:
    app: minio

---

apiVersion: v1
kind: Service
metadata:
  name: ui-minio
spec:
  selector:
    app: minio
  ports:
    - name: http
      port: 9001
      targetPort: http
