k8s/cluster/minio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "api-minio-ingress"
  namespace: "minio"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/http2-enabled: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"

spec:
  ingressClassName: public
  rules:
    - host: "api.s3.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "api-minio"
                port:
                  number: 9000
  tls:
    - hosts:
        - "api.s3.gastbob40.ovh"
      secretName: "api.s3.gastbob40.ovh-tls"

---

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ui-minio-ingress"
  namespace: "minio"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/http2-enabled: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"

spec:
  ingressClassName: public
  rules:
    - host: "s3.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "ui-minio"
                port:
                  number: 9001
  tls:
    - hosts:
        - "s3.gastbob40.ovh"
      secretName: "s3.gastbob40.ovh-tls"
